misc/k8s/13-compradores-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compradores-deployment
  namespace: pos-tech
  labels:
    app: compradores
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compradores
  template:
    metadata:
      labels:
        app: compradores
    spec:
      imagePullSecrets:
        - name: "ghcr-secret"
      containers:
        - name: compradores
          image: ghcr.io/rccrv/sub3-compradores:1.0.1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      restartPolicy: Always
