misc/k8s/05-postgres-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres-loadbalancer
  namespace: pos-tech
spec:
  ports:
    - name: postgres-port
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
  type: LoadBalancer
