misc/k8s/15-compradores-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: compradores
  name: compradores-service
  namespace: pos-tech
spec:
  ports:
    - name: compradores-port
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: compradores
  type: ClusterIP
