misc/k8s/20-principal-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: principal
  name: principal-service
  namespace: pos-tech
spec:
  ports:
    - name: principal-port
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: principal
  type: ClusterIP
