misc/k8s/16-compradores-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compradores-ingress
  namespace: pos-tech
spec:
  rules:
    - host: compradores.agrotera.code.rccrv.nom.br
      http:
        paths:
          - backend:
              service:
                name: compradores-service
                port:
                  number: 80
            path: /
            pathType: Prefix
